fix: Vertical align

--- a/shared_assets/lite-frontend/scss/core/_helpers.scss
+++ b/shared_assets/lite-frontend/scss/core/_helpers.scss
@@ -1,7 +1,7 @@
 .lite-vertical-align {
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
 }
 
 .lite-horizontal-align {
